--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
     <button class="section-one__button">ЧИТАТЬ ДАЛЬШЕ</button>
     <a href="#" class="section-one__link">ДРУГИЕ ПРЕДЛОЖЕНИЯ</a>
     <img class="section-one__vektor" src="img/vector.svg" alt="">
-    <div class="section-one__social">
-      <a class="link__inst" href="#"></a>
-      <a class="link__vk" href="#"></a>
-      <a class="link__fb" href="#"></a>
-    </div>
-    <img class="section-one__ellipse" src="img/elips.png" alt="">
+    <div class="section-one__footer"
+        <a href="#">
+         <div class="section-one__footer-social section-one__footer-social_inst"> </div>
+        </a>
+        <a href="#">
+          <div class="section-one__footer-social section-one__footer-social_vk"> </div>
+        </a>
+        <a href="#">
+          <div class="section-one__footer-social section-one__footer-social_fb"> </div>
+        </a>
+        <img class="f__ellipse" src="img/elips.png" alt="">
+   </div>
   </section>
 
   <section class="section-two">
@@ -43,13 +49,34 @@
     <div class="section-two__product">
       <h1 class="section-two__product_title">Кожаный клатч</h1>
       <p class="section-two__product_subtitle">ОСЕННЯЯ КОЛЛЕКЦИЯ</p>
-      <p class="section-two__product_text">Бесплатная доставка включена. Предложение действует на сайте loco.com и в магазинах до 18.09.2018. Для получения скидки в магазинах предъявите скриншот данного предложения. В магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</p>
-    <div class="section-two__product_circle">
+      <p class="section-two__product_text" align="justify">Бесплатная доставка включена. Предложение действует на сайте loco.com и в магазинах до 18.09.2018. Для получения скидки в магазинах предъявите скриншот данного предложения. В магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</p>
+    <div class="section-two__product-circle">
       <a href="#"> <div class="section-two__product_circle section-two__product_circle_grey"></div></a>
       <a href="#"> <div class="section-two__product_circle section-two__product_circle_pink section-two__product_circle_active"></div></a>
       <a href="#"> <div class="section-two__product_circle section-two__product_circle_blue"></div></a>
       <a href="#"> <div class="section-two__product_circle section-two__product_circle_green"></div></a>
       <div class="section-two__product_price">1990₽</div>
+      <button class="section-two__product_button">ДОБАВИТЬ В КОРЗИНУ</button>
+    </div>
+    <a href="#" class="section-two__link">ДРУГИЕ ТОВАРЫ НА LOCO.COM</a>
+    <img class="section-two__vektor" src="img/vector2.svg" alt="">
   </section>
+
+  <footer class="footer">
+    <div class="footer__basic">
+      <div class="footer__look"></div>
+      <div class="footer__card">
+        <div class="footer__card-look">
+          <p class="card-look__title">Serene Total Look</p>
+          <p class="card-look__subtitle">ОСЕННЯЯ КОЛЛЕКЦИЯ</p>
+          <p class="card-look__text">Джинсы, свитер, обувь.<br>В комплект также входит пакет ароматного чая и кружка.</p>
+          <div class="card-look__button">
+            <a class="card-look__button_basket" href="#">ДОБАВИТЬ В КОРЗИНУ</a>
+          </div>
+        </div>
+        <a class="footer__card_button-other" href="#">ДРУГИЕ ТОВАРЫ НА LOCO.COM</a>
+      </div>
+    </div>
+  </footer>
   </main>
 </body>
