--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   </section>
 
   <section class="section-two">
-    <img class="section-two__bag-one" src="img/greybag.svg" alt="">
-    <img class="section-two__bag-two" src="img/pinkbag.svg" alt="">
+    <img class="section-two__bag-one" src="img/greybag.png" alt="">
+    <img class="section-two__bag-two" src="img/pinkbag.png" alt="">
     <div class="section-two__product">
       <h1 class="section-two__product_title">Кожаный клатч</h1>
       <p class="section-two__product_subtitle">ОСЕННЯЯ КОЛЛЕКЦИЯ</p>
@@ -64,7 +64,7 @@
   </section>
 
   <section class="section-three">
-    <img class="section-three__look" src="img/look.svg" alt="">
+    <img class="section-three__look" src="img/look.png" alt="">
     <div class="section-three__look-text">
       <h1 class="look-text__title">Serene Total Look</h1>
       <p class="look-text__subtitle">ОСЕННЯЯ КОЛЛЕКЦИЯ</p>
