--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
    <div class="header__logo">LOCO</div>
    <div class="header__language">RU</div>
    <div class="burger-menu">
-    <input id="menu__toggle" type="checkbox"/>
-    <label class="menu__btn" for="menu__toggle">
+    <input id="burger-menu__toggle" type="checkbox">
+    <label class="burger-menu__btn" for="burger-menu__toggle">
     <span></span>
     </label>
  </div>
@@ -22,11 +22,60 @@
 
   <main>
   <section class="section-one">
+    <div class="section-one__img"> </div>
     <h1 class="section-one__title"> Новая коллекция </h1>
     <p class="section-one__subtitle"> Бесплатная доставка включена. Предложение действует на сайте loco.com и в магазинах до 18.09.2018. Для получения скидки в магазинах предъявите скриншот данного предложения. В магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</p>
     <button class="section-one__button">ЧИТАТЬ ДАЛЬШЕ</button>
     <a href="#" class="section-one__link">ДРУГИЕ ПРЕДЛОЖЕНИЯ</a>
-    <img src="img/girl.png" alt="" class="section-one__img">
-  </section>">
+    <img class="section-one__vektor" src="img/vector.svg" alt="">
+    <div class="section-one__footer">
+        <a href="#">
+         <div class="section-one__footer-social section-one__footer-social-inst"> </div>
+        </a>
+        <a href="#">
+          <div class="section-one__footer-social section-one__footer-social-vk"> </div>
+        </a>
+        <a href="#">
+          <div class="section-one__footer-social section-one__footer-social-fb"> </div>
+        </a>
+        <img class="f__ellipse" src="img/elips.png" alt="">
+   </div>
+  </section>
+
+  <section class="section-two">
+    <img class="section-two__bag-one" src="img/greybag.png" alt="">
+    <img class="section-two__bag-two" src="img/pinkbag.png" alt="">
+    <div class="section-two__product">
+      <h1 class="section-two__product_title">Кожаный клатч</h1>
+      <p class="section-two__product_subtitle">ОСЕННЯЯ КОЛЛЕКЦИЯ</p>
+      <p class="section-two__product_text" align="justify">Бесплатная доставка включена. Предложение действует на сайте loco.com и в магазинах до 18.09.2018. Для получения скидки в магазинах предъявите скриншот данного предложения. В магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</p>
+    <div class="section-two__circle">
+      <a href="#"> <div class="section-two__circle-color section-two__product_circle_grey"></div></a>
+      <a href="#"> <div class="section-two__circle-color section-two__product_circle_pink"></div></a>
+      <a href="#"> <div class="section-two__circle-color section-two__product_circle_blue"></div></a>
+      <a href="#"> <div class="section-two__circle-color section-two__product_circle_green"></div></a>
+      <div class="section-two__product-price">1990₽</div>
+    </div>
+      <button class="section-two__product-button">ДОБАВИТЬ В КОРЗИНУ</button>
+    </div>
+    <a class="section-two__link" href="#" >ДРУГИЕ ТОВАРЫ НА LOCO.COM</a>
+    <img class="section-two__vektor" src="img/Vector2.svg" alt="">
+  </section>
+
+  <section class="section-three">
+    <img class="section-three__look" src="img/look.png" alt="">
+    <div class="section-three__look-text">
+      <h1 class="look-text__title">Serene Total Look</h1>
+      <p class="look-text__subtitle">ОСЕННЯЯ КОЛЛЕКЦИЯ</p>
+      <p class="look-text__text">Джинсы, свитер, обувь.<br>В комплект также входит пакет ароматного чая и кружка.</p>
+      <button class="look-text__button" type="button">ДОБАВИТЬ В КОРЗИНУ</button>
+    </div>
+    <a class="section-three__link" href="#">ДРУГИЕ ТОВАРЫ НА LOCO.COM</a>
+    <img class="section-three__vektor" src="img/vector3.svg" alt="">
+    <div class="section-three__footer">
+      <p class="footer__text">РАЗРАБОТАНО В</p>
+      <img class="footer__img" src="img/iconWHS.svg" alt="">
+    </div>
+  </section>
   </main>
 </body>
