--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <section class="section-two">
     <img class="section-two__bag-one" src="img/greybag.png" alt="">
-    <img class="section-two__bag-two" src="img/pinkbag.png" alt="">
+    <div class="section-two__bag-img-two"> </div>
     <div class="section-two__product">
       <h1 class="section-two__product_title">Кожаный клатч</h1>
       <p class="section-two__product_subtitle">ОСЕННЯЯ КОЛЛЕКЦИЯ</p>
@@ -63,7 +63,7 @@
   </section>
 
   <section class="section-three">
-    <img class="section-three__look" src="img/look.png" alt="">
+    <div class="section-three__look"> </div>
     <div class="section-three__look-text">
       <h1 class="look-text__title">Serene Total Look</h1>
       <p class="look-text__subtitle">ОСЕННЯЯ КОЛЛЕКЦИЯ</p>
@@ -71,7 +71,7 @@
       <button class="look-text__button" type="button">ДОБАВИТЬ В КОРЗИНУ</button>
     </div>
     <a class="section-three__link" href="#">ДРУГИЕ ТОВАРЫ НА LOCO.COM</a>
-    <img class="section-three__vektor" src="img/vector3.svg" alt="">
+    <div class="section-three__vektor"> </div>
     <div class="section-three__footer">
       <p class="footer__text">РАЗРАБОТАНО В</p>
       <img class="footer__img" src="img/iconWHS.svg" alt="">
