--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
      <title>Final_Project_Loco</title>
      <link rel="stylesheet" href="style.css">
      <link rel="stylesheet" href="fonts.css">
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap">
 </head>
 
 <body>
